container fixed alignment

--- a/css/default.css
+++ b/css/default.css
@@ -57,6 +57,11 @@ button {
 .container {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
   padding-right: 15px;
   padding-left: 15px;
   margin-left: auto;
